<resources>
    <string name="app_name">My POI</string>
    <string name="title_activity_layers">Layers</string>
    <string name="delete">Delete</string>
    <string name="icon" translatable="false">icon</string>
    <string name="maps" translatable="false">maps</string>
    <string name="label">Label</string>
    <string name="description">Description</string>
    <string name="latitude">Lat:</string>
    <string name="longitude">Lon:</string>
    <string name="layer">Layer:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="coordinate" translatable="false">99.99999</string>
    <string name="layers">layers</string>
    <string name="import_from_excel">Import from Excel</string>
    <string name="export_to_excel">Export to Excel</string>
    <string name="quit">Quit</string>
</resources>
