<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".EditPointActivity"
    android:alpha="0.8"
    android:background="@android:color/holo_purple"
    android:padding="30dp"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_point_icon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/locations"
        android:layout_above="@+id/editText"
        android:layout_margin="5dp"
        android:contentDescription="@string/icon"
        android:contextClickable="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/latitude"
        android:id="@+id/textView2"
        android:layout_toRightOf="@+id/new_point_icon"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:gravity="right"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/longitude"
        android:id="@+id/textView3"
        android:layout_toRightOf="@+id/new_point_icon"
        android:layout_toEndOf="@+id/new_point_icon"
        android:layout_below="@+id/textView2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/latitude"
        android:id="@+id/new_point_lat"
        android:gravity="left"
        android:layout_toLeftOf="@+id/new_point_delete"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/longitude"
        android:id="@+id/new_point_lon"
        android:layout_below="@+id/textView2"
        android:layout_above="@+id/new_point_layer"
        android:layout_toLeftOf="@+id/new_point_delete"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/editText"
        android:text="@string/layer"
        android:gravity="center"
        android:layout_alignBottom="@+id/new_point_layer"
        android:layout_alignTop="@+id/new_point_layer"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/new_point_layer"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/editText"
        android:layout_toEndOf="@+id/editText"
        android:layout_below="@+id/new_point_delete"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_point_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_point_layer"
        android:hint="@string/label"
        android:background="@android:color/transparent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_point_description"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="true"
        android:hint="@string/description"
        android:layout_below="@+id/new_point_label"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/new_point_save"
        android:layout_below="@+id/new_point_description"
        android:layout_alignRight="@+id/new_point_description"
        android:layout_alignEnd="@+id/new_point_description"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/new_point_cancel"
        android:layout_alignTop="@+id/new_point_save"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_point_delete"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@android:drawable/ic_menu_delete"
        />
</RelativeLayout>
